--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,19 +68,20 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Here are a few examples of my work.</p>
+						<p>Here are a few examples of my work.<br>
+						<a href="https://github.com/coriagogo">github.com/coriagogo</a></p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="https://github.com/coriagogo/Sprint-Challenge--User-Interface" class="image fit"><img src="images/thumbs/sprint-challenge-thumb.png" title="Sprint Challenge" alt="" /></a>
+								<a href="images/fulls/sprint-challenge-full.png" class="image fit"><img src="images/thumbs/sprint-challenge-thumb.png" title="Sprint Challenge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/great-idea-full.png" class="image fit"><img src="images/thumbs/great-idea-thumb.png" title="Great Idea" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/services-full.png" class="image fit"><img src="images/thumbs/services-thumb.png" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
