social media links added

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Say Hello!</h2>
+						<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>-->
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -124,12 +124,12 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/thepearlparis" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<!--<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
+						<li><a href="https://www.linkedin.com/in/pearl-paris-736183161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>-->
 					</ul>
 
 				<!-- Menu -->
