more thumbnails and github icon added

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<a href="images/fulls/services-full.png" class="image fit"><img src="images/thumbs/services-thumb.png" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/sweet-eats-full.png" class="image fit"><img src="images/thumbs/sweet-eats-thumb.png" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
@@ -130,6 +130,7 @@
 						<li><a href="https://www.linkedin.com/in/pearl-paris-736183161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>-->
+						<li><a href="https://github.com/coriagogo" class="icon fa-github-alt"><span class="label">GitHub</span></a></li>
 					</ul>
 
 				<!-- Menu -->
